[package]
name = "controllers"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7" }
lazy_static = "1.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
