[package]
name = "controllers"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7" }
lazy_static = "1.5.0"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }

# Dependencies on other workspace crates
commands = { path = "../commands" }
models = { path = "../models" }
dtos = { path = "../dtos" }
